# serpcord

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
docs/: Makefile  conf.py  index.rst  index.rst.bak0  modules.rst  serpcord.exceptions.rst  serpcord.models.rst  serpcord.rest.endpoint.rst  serpcord.rest.rst  serpcord.rst
docs/_static/: custom.css
docs/_templates/autosummary/: class.old.rst  class.rst  module.rst
docs/extensions/: attributetable.py
serpcord/: __init__.py  botclient.py
serpcord/exceptions/: __init__.py  dataparseexc.py  httpexc.py  serpcordexc.py
serpcord/models/: __init__.py  apimodel.py  cache.py  channel.py  enums.py  guild.py  model_abc.py  permissions.py  snowflake.py  user.py
serpcord/rest/: cdn.py  enums.py  helpers.py  httpsentdata.py  requester.py
serpcord/rest/endpoint/: __init__.py  channel.py  endpoint.py  endpoint_abc.py  guild.py  user.py
serpcord/utils/: __init__.py  model.py  string.py  typeutils.py
