[tool.poetry]
name = "serpcord"
version = "0.1.0"
description = "TODO"
authors = ["PgBiel"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc = {git = "https://github.com/PgBiel/sphinx-autodoc.git"}
sphinx-autoapi = "^1.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
